# faiss-s3

./: .gitignore  CLAUDE.md  Makefile  README.md  requirements.txt
.github/workflows/: ci-build-app.yml  ci-build-base-image.yml
client/: README.md  pyproject.toml
client/src/faiss_s3/: __init__.py  client.py  hello.py  meta.py
docs/dataset/: YFCC100M.claude.md  YFCC100M.md
docs/lib/: faiss.md  tantivy.md
docs/tasks/: 001-e2e-test.claude.md  001-e2e-test.md  002-server-github-ci.claude.md  003-filter.md  004-full-text-search.md  005-rust-based-io.md  006-python-binding-via-rust.md
exp/faiss-s3-rs/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  amazon-reviews-converter.py  amazon-reviews.py  build.rs  config.sh  faiss-s3-rs.code-workspace  pyproject.toml  rustfmt.toml
exp/faiss-s3-rs/dataset/: .gitignore  README.md
exp/faiss-s3-rs/docs/: 01-load-invlist-in-rust.md  02-tantivy-with-local-faiss.md  phase2-lazy-loading-options.claude.md
exp/faiss-s3-rs/include/: faiss_s3.h  s3_inverted_lists.h
exp/faiss-s3-rs/src/: faiss_s3.cpp  lib.rs  main.rs  s3_inverted_lists.cpp
exp/faiss-s3-rs/tests/: embed_tests.rs  local_file_tests.rs  s3_tests.rs  tantivy_tests.rs
server/: .dockerignore  CMakeLists.txt  Dockerfile  Makefile  README.md  S3InvertedLists.cpp  S3InvertedLists.h  binary_io.h  client_handler.h  config.sh  constants.h  protocol.h  s3_cache_server.cpp  s3_utils.h  server_state.h  tcp_server.h
server/ci/: Dockerfile.app  Dockerfile.base  build-server.sh  install-build-deps.sh  install-runtime-deps.sh  validate-sync.sh
tests/: .gitignore  README.md  test_e2e.py  test_e2e_full.py  test_import.py  test_meta.py  test_quora.py  test_s3_cache_server.py  test_yfcc.py
tests/e2e/: test_e2e.py  test_e2e_full.py
tests/filter/: .gitignore  README.md  post_filter.py  tantivy_fuzzy.py  tantivy_ivf_cluster_marimo.py
tests/yfcc/: yfcc14m_parquet.py
