[package]
name = "faiss-s3-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "faiss_s3_rs"
# NOTE: need both cdylib for python and rlib for main.rs
crate-type = ["cdylib", "rlib"]

[dependencies]
cxx = "1.0"
object_store = { version = "0.12.4", features = ["aws"] }
pyo3 = "0.25.0"
tokio = { version = "1", features = ["full"] }
# mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs" }
anyhow = { version = "1.0", features = ["backtrace"] }
rand = "0.8"
tantivy = "0.25.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
fastembed = "5.3.0"
ordered-float = "4.5"


# Used for building C++ code
[build-dependencies]
cxx-build = "1.0"
